ref(deisctl): change go package to deis/deis/deisctl

--- a/deisctl/Makefile
+++ b/deisctl/Makefile
@@ -31,7 +31,7 @@ test: test-style
 
 package:
 	rm -f package
-	docker build -t deis/deisctl .
+	docker build -t deis/deis/deisctl .
 	mkdir -p package
-	-docker cp `docker run -d deis/deisctl`:/tmp/deisctl.tar.gz package/
+	-docker cp `docker run -d deis/deis/deisctl`:/tmp/deisctl.tar.gz package/
 	mv package/deisctl.tar.gz package/deisctl-v`cat deis-version`.tar.gz
