--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -33,8 +33,10 @@ http {
     {{ end }}
     client_max_body_size {{ or (.deis_router_bodySize) "1m" }};
 
+    log_format upstreaminfo '[$time_local] - $remote_addr - $remote_user - $status - "$request" - $bytes_sent - "$http_referer" - "$http_user_agent" - "$server_name" - $upstream_addr';
+    
     # send logs to STDOUT so they can be seen using 'docker logs'
-    access_log /opt/nginx/logs/access.log;
+    access_log /opt/nginx/logs/access.log upstreaminfo;
     error_log  /opt/nginx/logs/error.log;
 
     map $http_upgrade $connection_upgrade {
