Revert "fix(docs): turn off "warnings as errors" for sphinx-build"
This reverts commit ad1c1cd0e61dac6cbdacf50c318f1a14242f7e47.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -70,7 +70,7 @@ server: dirhtml
 test: clean
 	@if [ ! -d venv ]; then virtualenv venv; fi
 	venv/bin/pip install -q -r docs_requirements.txt
-	venv/bin/$(SPHINXBUILD) -b dirhtml -N $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
+	venv/bin/$(SPHINXBUILD) -b dirhtml -N -W $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
 	grep -q \<h1\>Welcome _build/dirhtml/index.html || exit 1
 	@echo
 	@echo "Test finished. The HTML pages are in $(BUILDDIR)/dirhtml."
