feat(router): support customized server_names_hash_bucket_size setting
Long domain names have trouble with the default settings for
server_names_hash_bucket_size and server_names_hash_max_size. This
commit makes these settings configurable based on etcd keys.

See http://nginx.org/en/docs/http/server_names.html for details
on these settings.

--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -16,8 +16,10 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
+
     types_hash_max_size 2048;
-    server_names_hash_bucket_size 64;
+    server_names_hash_max_size {{ or (.deis_router_serverNameHashMaxSize) "512" }};
+    server_names_hash_bucket_size {{ or (.deis_router_serverNameHashBucketSize) "64" }};
 
     include /opt/nginx/conf/mime.types;
     default_type application/octet-stream;
