--- a/builder/Makefile
+++ b/builder/Makefile
@@ -4,24 +4,27 @@ COMPONENT = builder
 IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
 DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
 BUILD_IMAGE := $(COMPONENT)-build
+BINARY_DEST_DIR := image/bin
 
 build: check-docker
-	docker build -t $(BUILD_IMAGE) image
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-domain bin/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-types bin/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-version bin/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/get-app-config bin/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/get-app-values bin/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/publish-release-controller bin/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/yaml2json-procfile bin/
-	docker build -t $(IMAGE) .
-	rm bin/extract-domain
-	rm bin/extract-types
-	rm bin/extract-version
-	rm bin/get-app-config
-	rm bin/get-app-values
-	rm bin/publish-release-controller
-	rm bin/yaml2json-procfile
+	docker build -t $(BUILD_IMAGE) .
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-domain $(BINARY_DEST_DIR)/
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-types $(BINARY_DEST_DIR)/
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-version $(BINARY_DEST_DIR)/
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/generate-buildhook $(BINARY_DEST_DIR)/
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/get-app-config $(BINARY_DEST_DIR)/
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/get-app-values $(BINARY_DEST_DIR)/
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/publish-release-controller $(BINARY_DEST_DIR)/
+	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/yaml2json-procfile $(BINARY_DEST_DIR)/
+	docker build -t $(IMAGE) image
+	rm $(BINARY_DEST_DIR)/extract-domain
+	rm $(BINARY_DEST_DIR)/extract-types
+	rm $(BINARY_DEST_DIR)/extract-version
+	rm $(BINARY_DEST_DIR)/generate-buildhook
+	rm $(BINARY_DEST_DIR)/get-app-config
+	rm $(BINARY_DEST_DIR)/get-app-values
+	rm $(BINARY_DEST_DIR)/publish-release-controller
+	rm $(BINARY_DEST_DIR)/yaml2json-procfile
 
 clean: check-docker check-registry
 	rm -f deisctl
@@ -63,7 +66,7 @@ deploy: build dev-release restart
 test: test-unit test-functional
 
 test-unit:
-	@echo no unit tests
+	godep go test -v .
 
 test-functional:
 	@docker history deis/test-etcd >/dev/null 2>&1 || docker pull deis/test-etcd:latest
