--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -56,7 +56,7 @@ write_files:
   - path: /etc/systemd/system/docker.service.d/50-insecure-registry.conf
     content: |
         [Service]
-        Environment=DOCKER_OPTS='--insecure-registry="10.0.0.0/8"'
+        Environment="DOCKER_OPTS=\"--insecure-registry='10.0.0.0/8' --insecure-registry='172.16.0.0/12' --insecure-registry='192.168.0.0/16'\""
   - path: /run/deis/bin/get_image
     permissions: '0755'
     content: |
