--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -98,7 +98,7 @@ http {
 
         {{ if eq $enforceHTTPS "true" }}
         if ($access_scheme != "https") {
-          return 301 https://$server_name$request_uri;
+          return 301 https://$host$request_uri;
         }
         {{ end }}
     }
@@ -195,7 +195,7 @@ http {
 
             {{ if eq $enforceHTTPS "true" }}
             if ($access_scheme != "https") {
-              return 301 https://$server_name$request_uri;
+              return 301 https://$host$request_uri;
             }
             {{ end }}
 
@@ -245,7 +245,7 @@ http {
 
             {{ if eq $enforceHTTPS "true" }}
             if ($access_scheme != "https") {
-              return 301 https://$server_name$request_uri;
+              return 301 https://$host$request_uri;
             }
             {{ end }}
 
