fix(router): account for dashes in custom domains
confd turns hyphens to dashes, so we need to account for that in
domains. Since confd does not have native support for strings.Replace,
I've had to fork our current branch and backport strings.Replace as a
template function.

--- a/router/image/Dockerfile
+++ b/router/image/Dockerfile
@@ -5,8 +5,8 @@ ENV DEBIAN_FRONTEND noninteractive
 # install common packages
 RUN apt-get update && apt-get install -y curl net-tools sudo
 
-# install confd
-RUN curl -sSL -o /usr/local/bin/confd https://s3-us-west-2.amazonaws.com/opdemand/confd-git-b8e693c \
+# install confd from https://github.com/deis/confd/tree/deis
+RUN curl -sSL -o /usr/local/bin/confd https://s3-us-west-2.amazonaws.com/opdemand/confd-git-4c50136 \
     && chmod +x /usr/local/bin/confd
 
 # install common packages
