--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -157,9 +157,11 @@ http {
     server {
         server_name {{ Base $domain.Key }};
         {{/* if a SSL certificate is installed for this domain, use SSL */}}
-        {{/* Note (bacongobbler): domains are separate from the default platform domain, */}}
+        {{/* NOTE (bacongobbler): domains are separate from the default platform domain, */}}
         {{/* so we can't rely on deis.conf as each domain is an island */}}
-        {{ if index $root (printf "deis_certs_%s_cert" (Base $domain.Key)) }}
+        {{/* FIXME (bacongobbler): confd turns hyphens to dashes, so we need to account */}}
+        {{/* for that in domains */}}
+        {{ if index $root (printf "deis_certs_%s_cert" (Replace (Base $domain.Key) "-" "_" -1)) }}
         server_name_in_redirect off;
         port_in_redirect off;
         listen 80;
