feat(router): customize error_log level via etcd
Add method to customize the nginx error_log level via etcd. This helps when
debugging issues in deis-router.

Fixes #3560

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -51,7 +51,7 @@ http {
 
     # send logs to STDOUT so they can be seen using 'docker logs'
     access_log /opt/nginx/logs/access.log upstreaminfo;
-    error_log  /opt/nginx/logs/error.log;
+    error_log  /opt/nginx/logs/error.log {{ or (.deis_router_errorLogLevel) "error" }};
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
