ref(user-data): adjust timeouts

--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -24,26 +24,32 @@ coreos:
       PermissionsStartOnly=true
       Restart=always
       RestartSec=10s
+      LimitNOFILE=40000
       EnvironmentFile=/etc/environment
       Environment="ETCD_IMAGE=quay.io/coreos/etcd:v2.0.13"
+      Environment="ETCD_ELECTION_TIMEOUT=2000"
+      Environment="ETCD_HEARTBEAT_INTERVAL=400"
+      Environment="ETCD_DATA_DIR=/var/lib/etcd2"
+      Environment="ETCD_NAME=%m"
       Environment="DOCKER_HOST=unix:///var/run/early-docker.sock"
-      LimitNOFILE=40000
       ExecStartPre=/bin/sh -c "docker history $ETCD_IMAGE >/dev/null 2>&1 || docker pull $ETCD_IMAGE"
-      ExecStartPre=/bin/sh -c "docker inspect etcd2 >/dev/null 2>&1 && docker rm -f etcd2 || true"
+      ExecStartPre=/bin/sh -c "docker inspect $ETCD_NAME >/dev/null 2>&1 && docker rm -f $ETCD_NAME || true"
       ExecStart=/usr/bin/docker run --net=host --rm \
-        --volume=/var/lib/etcd2:/var/lib/etcd2 \
+        --volume=${ETCD_DATA_DIR}:/var/lib/etcd2 \
         --volume=/usr/share/ca-certificates:/etc/ssl/certs:ro \
         -p 4001:4001 -p 2380:2380 -p 2379:2379 -p 7001:7001 \
-        --name etcd2 \
+        --name ${ETCD_NAME} \
         ${ETCD_IMAGE} \
-        -name %m \
+        -name ${ETCD_NAME} \
         -data-dir /var/lib/etcd2 \
         -advertise-client-urls http://${COREOS_PRIVATE_IPV4}:2379,http://${COREOS_PRIVATE_IPV4}:4001 \
         -listen-client-urls http://0.0.0.0:2379,http://0.0.0.0:4001 \
         -initial-advertise-peer-urls http://${COREOS_PRIVATE_IPV4}:2380,http://${COREOS_PRIVATE_IPV4}:7001 \
         -listen-peer-urls http://0.0.0.0:2380,http://0.0.0.0:7001 \
+        --heartbeat-interval ${ETCD_HEARTBEAT_INTERVAL} \
+        --election-timeout ${ETCD_ELECTION_TIMEOUT} \
         --discovery #DISCOVERY_URL
-      ExecStop=-/usr/bin/docker stop etcd2
+      ExecStop=-/usr/bin/docker stop $ETCD_NAME
   - name: docker-tcp.socket
     command: start
     enable: true
